# Hydra-HFT

./: .gitignore  README.md  run_backtest.py
hydra_brain/: backtest_engine.py  dashboard.py  live_trend.py  main_strategy.py  manual_reset.py  optimize.py  recorder.py  strategies.py  test_env.py  test_feed.py  train.py
hydra_brain/envs/: crypto_env.py
hydra_core/: CMakeLists.txt
hydra_core/src/: main.cpp
scripts/: download_data.py
shared_defs/: schema.h  schema.py
